<resources>
    <string name="app_name">Kindergaten</string>
    <string name="facebook_app_id">149297532267274</string>

    <string name="chat">Chat</string>
    <string name="login">Đăng nhập</string>
    <string name="setting">Cài đặt</string>
    <string name="about">Thông tin</string>
    <string name="sign_out">Thoát</string>
    <string name="writeMessage">Viết tin nhắn…</string>
    <string name="info">Thông tin</string>
    <string name="close">Đóng</string>
    <string name="noInternetConnection">Không có kết nối internet</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="forgetPassword">Quên mật khẩu?</string>
    <string name="emptyEmailOrPassword">Hãy nhập email và password</string>
    <string name="error_common">Đã có lỗi xảy ra trong quá trình xử lý, xin thử lại!</string>
    <string name="newFeed">Bảng tin</string>
    <string name="aClass">Lớp học</string>
    <string name="camera">Camera</string>
    <string name="children">Con trẻ</string>
    <string name="teacher">Giáo viên</string>
    <string name="image_class">Hình ảnh của lớp</string>
    <string name="class_member">Danh sách lớp</string>
    <string name="hobby">Sở thích:</string>
    <string name="characteristic">Đặc điểm:</string>
    <string name="error_post">Không thể làm mới bảng tin</string>
    <string name="likes">lượt thích</string>
    <string name="cancel">Hủy</string>
    <string name="OK">Đồng ý</string>
    <string name="login_to_like">Hãy đăng nhập để like!</string>
    <string name="reset_password">Gửi email đặt lại mật khẩu</string>
    <string name="back">Quay lại</string>
    <string name="Ms">Chị</string>
    <string name="Mr">Anh</string>
    <string name="MrTeacher">Thầy</string>
    <string name="MsTeacher">Cô</string>
    <string name="baby">Bé</string>
    <string name="error_msg_101">Email hoặc mật khẩu không chính xác</string>
    <string name="login_to_chat">Hãy đăng nhập để trò chuyện!</string>
    <string name="login_successfully">Đăng nhập\nthành công</string>
    <string name="cant_connect">Không thể kết nối, chạm để thử lại</string>
    <string name="online">Đang hoạt động</string>
    <string name="offline">Không hoạt động</string>
    <string name="member">thành viên</string>
    <string name="liked">Đã thích</string>
    <string name="unliked">Đã bỏ thích</string>
    <string name="hint_comment">Thêm một bình luận…</string>
    <string name="comment">Bình luận</string>
    <string name="login_to_comment">Hãy đăng nhập để bình luận!</string>
    <string name="comment1">bình luận</string>
    <string name="watching_children">Quan tâm đến con trẻ</string>
    <string name="children_content_unsigned_in_children">Theo dõi chỉ số sức khỏe của trẻ một cách đầy đủ hơn!</string>
    <string name="what_are_your_children_doing">Trẻ đang làm gì?</string>
    <string name="children_content_unsigned_in_camera">Khám phá thế giới của trẻ tại Kidshome qua camera.</string>
    <string name="tap_to_retry">Không thể đăng, chạm để thử lại</string>
    <string name="tap_to_retry1">Chạm để thử lại</string>
    <string name="just_now">Vừa xong</string>
    <string name="minutes_ago">phút trước</string>
    <string name="hour_ago">giờ trước</string>
    <string name="yesterday">Ngày hôm qua</string>
    <string name="days_ago">ngày trước</string>
    <string name="minute">phút</string>
    <string name="hour">giờ</string>
    <string name="day">ngày</string>
    <string name="week">tuần</string>
    <string name="cant_play">Không thể bật video</string>
    <string name="session_expired">Phiên đã hết hạn</string>
    <string name="please_re_login">Vui lòng đăng nhập lại</string>
    <string name="signing_out">Đang đăng xuất</string>
    <string name="health_index">Chỉ số sức khỏe</string>
    <string name="health_overview">Khám sức khỏe</string>
    <string name="obese">Thừa cân</string>
    <string name="malnutrition">Suy dinh dưỡng</string>
    <string name="stunted">Thấp còi</string>
    <string name="list_member">Danh sách lớp - %d trẻ</string>
    <string name="eyes">• Mắt:</string>
    <string name="result">• Kết quả:</string>
    <string name="ent">• Tai mũi họng:</string>
    <string name="others">• Bệnh khác:</string>
    <string name="tooth">• Răng:</string>
    <string name="type_result">sức khỏe loại %d</string>
    <string name="password_reset">Hãy kiểm tra email và đăng nhập lại</string>
    <string name="account_type">Tài khoản</string>
    <string name="learn_and_play_time">Lịch sinh hoạt</string>
    <string name="timetable">•  Thời gian biểu</string>
    <string name="timetable1">Thời gian biểu %s</string>
    <string name="timetable2">Thời khóa biểu %s - </string>
    <string name="group">Khối %s</string>
    <string name="study_time_table">•  Thời khóa biểu</string>
    <string name="learn_schedule">•  Lịch học năng khiếu</string>
    <string name="edit_info">Sửa thông tin cá nhân</string>
    <string name="weight">Cân nặng của trẻ</string>
    <string name="height">Chiều cao của trẻ</string>
    <string name="normal">Bình thường</string>
    <string name="post">Đăng</string>
    <string name="post_content">Nội dung bản tin</string>
    <string name="confirm">Xác nhận</string>
    <string name="next">Tiếp tục</string>
    <string name="message_cancel_post">Bạn sẽ từ bỏ những thông tin vừa định đăng?</string>
    <string name="tap_to_select_media">Chạm để chọn ảnh/video</string>
    <string name="image">ảnh</string>
    <string name="photo_camera">Máy ảnh</string>
    <string name="add">Thêm</string>
    <string name="error_no_camera">Không có camera</string>
    <string name="normal_post">Thông báo thường</string>
    <string name="signed_out">Đã đăng xuất</string>
    <string name="post_time">Thời gian đăng</string>
    <string name="now">Ngay bây giờ</string>
    <string name="schedule">Theo lịch</string>
    <string name="post_schedule">Lên lịch</string>
    <string name="notification">Thông báo</string>
    <string name="all">Tất cả</string>
    <string name="parents">Phụ huynh</string>
    <string name="important_post">Thông báo quan trọng</string>
    <string name="school_name">Mầm non Kid\'s home</string>
    <string name="height_growth">Biểu đồ tăng trưởng chiều cao</string>
    <string name="weight_growth">Biểu đồ tăng trưởng cân nặng</string>
    <string name="event">Sự kiện:</string>
    <string name="subject">Chủ đề:</string>
    <string name="subject_event">Chủ đề/\nsự kiện</string>
    <string name="please_check_connection">Hãy kiểm tra lại kết nối!</string>
    <string name="receive_important_notification">Nhận thông báo quan trọng</string>
    <string name="message_cancel_images">Những hình ảnh bạn chọn sẽ không được lưu?</string>
    <string name="information">Thông tin</string>
    <string name="DOB">Ngày sinh</string>
    <string name="name">Tên</string>
    <string name="gender">Giới tính</string>
    <string name="phone_number">Điện thoại</string>
    <string name="save">Lưu</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="work">Công việc</string>
    <string name="bClass">Lớp</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="new_password_again">Nhập lại mật khẩu mới</string>
    <string name="password_at_least_6_chars">Mật khẩu phải dài tối thiểu 6 ký tự</string>
    <string name="password_not_match">Mật khẩu mới không trùng khớp</string>
    <string name="change_password_successfully">Đổi mật khẩu\nthành công</string>
    <string name="wrong_password">Mật khẩu cũ không chính xác</string>
    <string name="language">Ngôn ngữ</string>
    <string name="message_cancel_edit_info">Thông tin sẽ không được sửa đổi?</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="confirm_log_out">Bạn có thực sự muốn thoát?</string>
    <string name="update_successfully">Cập nhật\nthành công</string>
    <string name="children_info">Thông tin con trẻ</string>
    <string name="schedule_is_not_valid">Hãy lên lịch trong ít nhất 10 phút nữa!</string>
    <string name="post_schedule_successfully">Thông báo sẽ được đăng vào %s</string>
    <string name="video">video</string>
    <string name="message">Tin nhắn</string>
    <string name="tap_to_select_image">Chạm để chọn ảnh</string>
    <string name="error_upload">Upload lỗi, hãy thử lại!</string>
    <string name="uploading">Đang upload ảnh...</string>
    <string name="sending">Đang gửi ảnh...</string>
</resources>
