<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_fragment_login"
                android:descendantFocusability="beforeDescendants">

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_email"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_vertical_high_fragment_login"
        android:text="@string/forgetPassword"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteFade"/>

    <EditText
        android:id="@+id/edittext_email"
        style="@style/StyleEditTextFragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/button_reset_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_email"
        android:layout_marginLeft="@dimen/margin_horizontal_fragment_login"
        android:layout_marginRight="@dimen/margin_horizontal_fragment_login"
        android:layout_marginTop="@dimen/margin_vertical"
        android:background="@drawable/background_button_login"
        android:foreground="?selectableItemBackground"
        android:text="@string/reset_password"
        android:textColor="@color/colorWhiteFade"
        android:textSize="16sp"/>

    <ProgressBar
        android:id="@+id/progressbar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_reset_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_vertical_high_fragment_login"/>


    <TextView
        android:id="@+id/textview_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/margin_vertical_low"
        android:layout_marginTop="@dimen/margin_vertical_low"
        android:paddingLeft="@dimen/margin_horizontal"
        android:paddingRight="@dimen/margin_horizontal"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteFade"/>

</RelativeLayout>