<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fragment_login"
    android:clickable="true"
    android:descendantFocusability="beforeDescendants">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressbar_loading"
            android:layout_width="@dimen/item_size"
            android:layout_height="@dimen/item_size"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:padding="4.5dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageview_success"
            android:layout_width="@dimen/item_size"
            android:layout_height="@dimen/item_size"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:padding="4.5dp"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_mark"/>

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/margin_vertical"
        android:textColorHint="@color/colorWhiteFadeFade"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorWhiteFade">

        <EditText
            android:id="@+id/edittext_old_password"
            style="@style/StyleEditTextFragmentLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:hint="@string/current_password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_old_password"
        android:layout_marginTop="@dimen/margin_top_text_input_layout_frm_login"
        android:textColorHint="@color/colorWhiteFadeFade"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorWhiteFade">

        <EditText
            android:id="@+id/edittext_new_password1"
            style="@style/StyleEditTextFragmentLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_new_password"
        android:layout_marginTop="@dimen/margin_top_text_input_layout_frm_login"
        android:textColorHint="@color/colorWhiteFadeFade"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorWhiteFade">

        <EditText
            android:id="@+id/edittext_new_password2"
            style="@style/StyleEditTextFragmentLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:hint="@string/new_password_again"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>
